block quote colour change

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ h1 {
 
 blockquote {
 
-  color: #A54B00;
+  color: #FFF;
   font-size: 90px;
   text-transform: uppercase;
   font-family:'Montserrat';
