--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,16 @@ h1 {
 
 }
 
+h2 {
+
+  color: #FFFFFF;
+  font-size: 50px;
+  text-transform: uppercase;
+  font-family:'Montserrat';
+
+}
+
+
 blockquote {
 
   color: #FFFFFF;
