--- a/css/style.css
+++ b/css/style.css
@@ -51,19 +51,23 @@ h1 {
 h2 {
 
   color: #FFFFFF;
-  font-size: 50px;
+  font-size: 90px;
   text-transform: uppercase;
   font-family:'Montserrat';
 
 }
 
+h3 {
+
+  color: #FFFFFF;
+  font-size: 50px;
+  text-transform: lowercase;
+  font-family:'Montserrat';
+
+}
 
 blockquote {
 
-  color: #FFFFFF;
-  font-size: 90px;
-  text-transform: uppercase;
-  font-family:'Montserrat';
 
 }
 
